src/pydocstyle/snapshots/ruff__pydocstyle__tests__D211_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    NoBlankLineBeforeClass: 1
  location:
    row: 170
    column: 4
  end_location:
    row: 170
    column: 29
  fix:
    location:
      row: 169
      column: 0
    end_location:
      row: 170
      column: 0
    content: ""
    message: ~
  parent: ~
- kind:
    NoBlankLineBeforeClass: 1
  location:
    row: 181
    column: 4
  end_location:
    row: 181
    column: 24
  fix:
    location:
      row: 180
      column: 0
    end_location:
      row: 181
      column: 0
    content: ""
    message: ~
  parent: ~

