src/pydocstyle/snapshots/ruff__pydocstyle__tests__D214_sections.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    SectionNotOverIndented: Returns
  location:
    row: 135
    column: 4
  end_location:
    row: 141
    column: 7
  fix:
    patch:
      content: "    "
      location:
        row: 137
        column: 0
      end_location:
        row: 137
        column: 8

