src/pydocstyle/snapshots/ruff__pydocstyle__tests__D215_sections.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind:
    SectionUnderlineNotOverIndented: Returns
  location:
    row: 147
    column: 4
  end_location:
    row: 153
    column: 7
  fix:
    location:
      row: 150
      column: 0
    end_location:
      row: 150
      column: 9
    content: "    "
    message: ~
  parent: ~
- kind:
    SectionUnderlineNotOverIndented: Returns
  location:
    row: 161
    column: 4
  end_location:
    row: 165
    column: 7
  fix:
    location:
      row: 164
      column: 0
    end_location:
      row: 164
      column: 9
    content: "    "
    message: ~
  parent: ~

