src/pydocstyle/snapshots/ruff__pydocstyle__tests__D300_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind: UsesTripleQuotes
  location:
    row: 307
    column: 4
  end_location:
    row: 307
    column: 19
  fix: ~
  parent: ~
- kind: UsesTripleQuotes
  location:
    row: 312
    column: 4
  end_location:
    row: 312
    column: 19
  fix: ~
  parent: ~
- kind: UsesTripleQuotes
  location:
    row: 317
    column: 4
  end_location:
    row: 317
    column: 15
  fix: ~
  parent: ~
- kind: UsesTripleQuotes
  location:
    row: 322
    column: 4
  end_location:
    row: 322
    column: 15
  fix: ~
  parent: ~
- kind: UsesTripleQuotes
  location:
    row: 328
    column: 4
  end_location:
    row: 328
    column: 16
  fix: ~
  parent: ~

