src/pydocstyle/snapshots/ruff__pydocstyle__tests__D301_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind: UsesRPrefixForBackslashedContent
  location:
    row: 328
    column: 4
  end_location:
    row: 328
    column: 16
  fix: ~
  parent: ~
- kind: UsesRPrefixForBackslashedContent
  location:
    row: 333
    column: 4
  end_location:
    row: 333
    column: 20
  fix: ~
  parent: ~
- kind: UsesRPrefixForBackslashedContent
  location:
    row: 338
    column: 4
  end_location:
    row: 338
    column: 21
  fix: ~
  parent: ~

