src/pydocstyle/snapshots/ruff__pydocstyle__tests__D400_D.py.snap
---
source: src/pydocstyle/mod.rs
expression: checks
---
- kind: EndsInPeriod
  location:
    row: 355
    column: 4
  end_location:
    row: 355
    column: 17
  fix:
    location:
      row: 355
      column: 14
    end_location:
      row: 355
      column: 14
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 406
    column: 24
  end_location:
    row: 406
    column: 39
  fix:
    location:
      row: 406
      column: 36
    end_location:
      row: 406
      column: 36
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 410
    column: 4
  end_location:
    row: 410
    column: 24
  fix:
    location:
      row: 410
      column: 21
    end_location:
      row: 410
      column: 21
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 416
    column: 4
  end_location:
    row: 416
    column: 24
  fix:
    location:
      row: 416
      column: 21
    end_location:
      row: 416
      column: 21
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 422
    column: 34
  end_location:
    row: 422
    column: 49
  fix:
    location:
      row: 422
      column: 46
    end_location:
      row: 422
      column: 46
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 429
    column: 48
  end_location:
    row: 429
    column: 63
  fix:
    location:
      row: 429
      column: 60
    end_location:
      row: 429
      column: 60
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 470
    column: 4
  end_location:
    row: 470
    column: 24
  fix:
    location:
      row: 470
      column: 21
    end_location:
      row: 470
      column: 21
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 475
    column: 4
  end_location:
    row: 475
    column: 24
  fix:
    location:
      row: 475
      column: 21
    end_location:
      row: 475
      column: 21
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 480
    column: 4
  end_location:
    row: 480
    column: 24
  fix:
    location:
      row: 480
      column: 21
    end_location:
      row: 480
      column: 21
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 487
    column: 4
  end_location:
    row: 487
    column: 24
  fix:
    location:
      row: 487
      column: 21
    end_location:
      row: 487
      column: 21
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 509
    column: 4
  end_location:
    row: 509
    column: 34
  fix:
    location:
      row: 509
      column: 31
    end_location:
      row: 509
      column: 31
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 514
    column: 4
  end_location:
    row: 514
    column: 33
  fix:
    location:
      row: 514
      column: 30
    end_location:
      row: 514
      column: 30
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 520
    column: 4
  end_location:
    row: 520
    column: 32
  fix:
    location:
      row: 520
      column: 29
    end_location:
      row: 520
      column: 29
    content: "."
    message: ~
  parent: ~
- kind: EndsInPeriod
  location:
    row: 581
    column: 4
  end_location:
    row: 581
    column: 51
  fix:
    location:
      row: 581
      column: 47
    end_location:
      row: 581
      column: 47
    content: "."
    message: ~
  parent: ~

